Tiles should no longer overflow if your screen is less than 487px wide

--- a/styles/tiles.css
+++ b/styles/tiles.css
@@ -17,14 +17,6 @@
   position: relative;
 }
 
-.tile{
-  border: 5px solid black;
-  background-color: rgb(33, 29, 29);
-  border-radius: 2px;
-  display: inline-block;
-  position: relative;
-}
-
 .dark-theme-tile{
   background-color: white;
 }
@@ -34,6 +26,29 @@
   display: block;
   padding-bottom: 55px;
   padding-left: 55px;
+}
+
+/* Mobile */
+
+@media (max-width:540px) {
+  .tile::before{
+    padding-bottom: 40px;
+    padding-left: 40px;  
+  }
+}
+
+@media (max-width:388px) {
+  .tile::before{
+    padding-bottom: 30px;
+    padding-left: 30px;  
+  }
+}
+
+@media (max-width:320px) {
+  .tile::before{
+    padding-bottom: 15px;
+    padding-left: 15px;  
+  }
 }
 
 /* Tile letters */
